<resources>
    <string name="app_name">Dabba Tracker</string>
    <string name="date_labelString">Game Date</string>
    <string name="score_label">Max Game Score: </string>
    <string name="score_TextView">201</string>
    <string name="roundno_label">Round No.:  </string>
    <string name="roundno_TextView">420</string>
    <string name="betamt_label">"Game Bet Amount: "</string>
    <string name="betamt_TextView">5234</string>
    <string name="start_new_game">New Game</string>
    <string name="dabba_history">Dabba History</string>
    <string name="game_title">Game Title</string>
    <string name="game_winner">Game Winner</string>
    <string name="game_dateString">Game Date</string>
    <string name="clear_history">Clear History</string>
    <string name="new_dabba">New Dabba</string>
    <string name="next_round_Button">Next Round</string>
    <string name="exit_game_text">Exit Game</string>
    <string name="max_score">"Max. Score: "</string>
    <string name="score_hint">Numbers only (E.g.:151, 201, etc.)</string>
    <string name="choose_players">Add Others</string>
    <string name="new_game_properties">"Enter new game properties: "</string>
    <string name="game_dateSelector">"Initiated at: "</string>
    <string name="scoreBoard">"Score Board"</string>
    <string name="cancel_creategame">Cancel</string>
    <string name="create_game">Start Game</string>
    <string name="bet_amt">"Bet Amt. per Person (Rs.): "</string>
    <string name="add_players">Add More Players</string>
    <string name="done">Done</string>
    <string name="add_new_players">Add Players to your Game:</string>
    <string name="add_one_player">Enter player name</string>
    <string name="add_me">Add me</string>
    <string name="reset_list">Reset</string>
    <string name="upScore_hint">Hint: Please update this round\'s scores here. In case, you want to reduce any player\'s scores, you may put a negative number.</string>
    <string name="thisRoundTextView_hint">Please update this Round\'s Scores:</string>
    <string name="players_chosen">Players Chosen:</string>
    <string name="help">Help</string>
    <string name="changeMaxScore">Change Max Score</string>
    <string name="choosehint">(Swipe left/right to remove a player. Long-press a player to re-arrange the list)</string>
    <string name="previous_game">Load Previous Game</string>
    <string name="winner_labelString">Winner:</string>
    <string name="winner_NameString">ABC</string>
    <string name="winner_AmtLabel">Winnings:</string>
    <string name="winner_AmtString">50000</string>
    <string name="final_ScoresString">Final Scores</string>
    <string name="retry_Button">Retry</string>
    <string name="done_text">Done</string>
</resources>
