<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/ndflayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <!-- Toolbar works on the same material implementationi in build.gradle: 'com.google.android.material:material:1.1.0' -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/ndftoolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbarbkgnd"
            android:gravity="center_horizontal"
            android:minHeight="?attr/actionBarSize">

            <TextView
                android:id="@+id/NDFtoolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Dabba Tracker: New Game"
                android:textColor="@color/toolbartext" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/date_SetView"
            style="@style/mainRelLayout"
            android:layout_marginTop="@dimen/label_margin"
            android:layout_below="@id/ndftoolbar"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/game_date_label"
                style="@style/innerRelLayout"
                android:text="@string/game_dateSelector"
                android:textSize="@dimen/labelSize" />

            <TextView
                android:id="@+id/game_dateEditText"
                style="@style/innerRelLayout"
                android:layout_toRightOf="@id/game_date_label"
                android:text="Game Date"
                android:textSize="@dimen/labelSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/score_Strip"
            style="@style/mainRelLayout"
            android:layout_below="@id/date_SetView"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/max_score_label"
                style="@style/innerRelLayout"
                android:text="@string/max_score"
                android:textSize="@dimen/labelSize" />

            <EditText
                android:id="@+id/max_scoreEditText"
                style="@style/innerRelLayout"
                android:layout_toRightOf="@id/max_score_label"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/betamt_Strip"
            style="@style/mainRelLayout"
            android:layout_below="@id/score_Strip"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bet_TextView"
                style="@style/innerRelLayout"
                android:text="@string/bet_amt"
                android:textSize="@dimen/labelSize" />

            <EditText
                android:id="@+id/bet_EditText"
                style="@style/innerRelLayout"
                android:layout_toEndOf="@id/bet_TextView"
                android:layout_toRightOf="@id/max_score_label"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/addPlayers_Strip"
            style="@style/mainRelLayout"
            android:layout_below="@id/betamt_Strip"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_meButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorButton"
                android:padding="4dp"
                android:text="@string/add_me"
                android:textColor="@color/black"
                android:textSize="@dimen/buttonTextSize" />

            <Button
                android:id="@+id/choose_playersButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/add_meButton"
                android:layout_weight="1"
                android:backgroundTint="@color/colorButton"
                android:padding="4dp"
                android:text="@string/choose_players"
                android:textColor="@color/black"
                android:textSize="@dimen/buttonTextSize" />

        </LinearLayout>

        <TextView
            android:id="@+id/choose_PlayersView"
            style="@style/mainRelLayout"
            android:layout_below="@id/addPlayers_Strip"
            android:text="@string/players_chosen"
            android:textSize="@dimen/headerSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/chooseplayershint"
            style="@style/mainRelLayout"
            android:layout_below="@id/choose_PlayersView"
            android:text="@string/choosehint"
            android:textSize="@dimen/headerSize"
            android:textStyle="italic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playersRecyclerView"
            style="@style/mainRelLayout"
            android:layout_below="@id/chooseplayershint"
            android:background="@drawable/view_selector"
            android:scrollbars="vertical" />
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/reset_playersFABButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/colorButton"
        android:gravity="center"
        android:text="@string/reset_list"
        android:theme="@style/Theme.MaterialComponents.NoActionBar"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/create_gameFABButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/colorButton"
        android:gravity="center"
        android:text="@string/create_game"
        android:theme="@style/Theme.MaterialComponents.NoActionBar"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>