<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/game_Strip"
            style="@style/mainRelLayout"
            android:layout_margin="@dimen/label_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/game_label"
                style="@style/innerRelLayout"
                android:text="@string/newgame_TextView"
                android:textSize="@dimen/buttonTextSize" />

            <TextView
                android:id="@+id/game_dateText"
                style="@style/innerRelLayout"
                android:layout_toRightOf="@id/game_label"
                android:text="@string/game_date"
                android:textSize="@dimen/buttonTextSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/score_Strip"
            style="@style/mainRelLayout"
            android:layout_below="@id/game_Strip"
            android:layout_margin="@dimen/label_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/max_score_label"
                style="@style/innerRelLayout"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center_vertical"
                android:text="@string/score_label"
                android:textSize="@dimen/buttonTextSize" />

            <TextView
                android:id="@+id/max_scoreText"
                style="@style/innerRelLayout"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/max_score_label"
                android:layout_toRightOf="@id/max_score_label"
                android:gravity="center_vertical"
                android:text="@string/score_TextView"
                android:textSize="@dimen/buttonTextSize" />

            <ImageButton
                android:id="@+id/changeMaxScoreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/max_scoreText"
                android:layout_toRightOf="@id/max_scoreText"
                android:padding="4dp"
                android:src="@drawable/pencil_24dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/betamt_Strip"
            style="@style/mainRelLayout"
            android:layout_below="@id/score_Strip"
            android:layout_margin="@dimen/label_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/betamt_label"
                style="@style/innerRelLayout"
                android:layout_weight="0.6"
                android:text="@string/betamt_label"
                android:textSize="@dimen/buttonTextSize" />

            <TextView
                android:id="@+id/bet_Text"
                style="@style/innerRelLayout"
                android:layout_toRightOf="@id/betamt_label"
                android:textSize="@dimen/buttonTextSize" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/max_scoreText"
                android:layout_toRightOf="@id/max_scoreText"
                android:padding="4dp"
                android:visibility="invisible"
                android:src="@drawable/pencil_24dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/roundno_Strip"
            style="@style/mainRelLayout"
            android:layout_below="@id/betamt_Strip"
            android:layout_margin="@dimen/label_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/roundno_label"
                style="@style/innerRelLayout"
                android:layout_weight="0.6"
                android:text="@string/roundno_label"
                android:textSize="@dimen/buttonTextSize" />

            <TextView
                android:id="@+id/roundno_Text"
                style="@style/innerRelLayout"
                android:layout_toRightOf="@id/roundno_label"
                android:textSize="@dimen/buttonTextSize" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/max_scoreText"
                android:layout_toRightOf="@id/max_scoreText"
                android:padding="4dp"
                android:visibility="invisible"
                android:src="@drawable/pencil_24dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/listPlayers_strip"
            style="@style/mainRelLayout"
            android:layout_below="@id/roundno_Strip"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/trophy1" />

            <TextView
                android:id="@+id/listplayers_label"
                style="@style/innerRelLayout"
                android:layout_width="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/scoreBoard"
                android:textAlignment="center"
                android:textSize="@dimen/labelSize"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/trophy1" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/liveNestedScrollView"
            style="@style/mainRelLayout"
            android:layout_below="@id/listPlayers_strip">

            <TableLayout
                android:id="@+id/liveScoreTables"
                style="@style/mainRelLayout"
                android:layout_below="@id/listplayers_label"
                android:showDividers="beginning" />

        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/next_RoundFABButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/colorButton"
        android:gravity="center"
        android:overScrollMode="always"
        android:text="@string/next_round_Button"
        android:theme="@style/Theme.MaterialComponents.NoActionBar"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/exit_FABButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/colorButton"
        android:gravity="center"
        android:text="@string/exit_game_text"
        android:theme="@style/Theme.MaterialComponents.NoActionBar"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>